# etsy

./: .gitignore  README.md  build.py  pyproject.toml
.github/workflows/: build.yml
src/etsy_scraper/: __init__.py  gui.py  real_chrome_scraper.py  section_scraper.py  utils.py
